# waldur-mcp-server

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE.md  README.md  RELEASING.md  pyproject.toml
src/waldur_mcp_server/: meta.yaml  server.py
