[project]
name = "waldur-mcp-server"
version = "0.1.0"
description = "Waldur MCP server project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "httpx>=0.28.1",
 "mcp[cli]>=1.2.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
waldur-mcp-server = "waldur_mcp_server:main"
